--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.jpg"
+avatar: "/assets/img/avatar-icon.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -33,9 +33,9 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "nguyennhianhtri@gmail.com"
-  github: "https://github.com/nguyennhianhtri"
-  linkedin: "https://www.linkedin.com/in/nguyennhianhtri/"
+  email: nguyennhianhtri@gmail.com
+  github: https://github.com/nguyennhianhtri
+  linkedin: https://www.linkedin.com/in/nguyennhianhtri/
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
@@ -81,7 +81,7 @@ footer-link-col: "#404040"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-navbar-img: "/assets/img/bgimage.jpg"
+navbar-img: "/assets/img/bgimage.png"
 #footer-img: "/assets/img/bgimage.png"
 #page-img: "/assets/img/bgimage.png"
 
