--- a/_config.yml
+++ b/_config.yml
@@ -67,10 +67,10 @@ excerpt_length: 50
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
+navbar-col: "#000000"
+navbar-text-col: "#FFFFFF"
+navbar-border-col: "#000000"
+page-col: "#062F4F"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
