--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ excerpt_length: 50
 navbar-col: "#000000"
 navbar-text-col: "#FFFFFF"
 navbar-border-col: "#000000"
-page-col: "#062F4F"
+page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
