--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Tri's World
+title: Tri's Colors
 
 # Your name to show in the footer
 author: Tri Nguyen
@@ -34,8 +34,8 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: nguyennhianhtri@gmail.com
-  github: https://github.com/nguyennhianhtri
-  linkedin: https://www.linkedin.com/in/nguyennhianhtri/
+  github: nguyennhianhtri
+  linkedin: nguyennhianhtri
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
@@ -67,7 +67,7 @@ excerpt_length: 50
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#000000"
+navbar-col: "#003D73"
 navbar-text-col: "#FFFFFF"
 navbar-border-col: "#000000"
 page-col: "#FFFFFF"
