--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-# url-pretty: "MyWebsite.com"
+url-pretty: Can't Get Enough? Reach Out To Me via [My Personal Email](mailto:nguyennhianhtri@gmail.com) and Let's Get Connected.
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
@@ -67,16 +67,16 @@ excerpt_length: 100
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#003D73"
+navbar-col: "#659DBD"
 navbar-text-col: "#FFFFFF"
 navbar-border-col: "#000000"
-page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+page-col: "#FBEEC1"
+text-col: "#FFFFFF"
+link-col: "#659DBD"
+hover-col: "#DAAD86"
+footer-col: "#8D8741"
+footer-text-col: "#FFFFFF"
+footer-link-col: "#659DBD"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
