--- a/_config.yml
+++ b/_config.yml
@@ -67,14 +67,14 @@ excerpt_length: 100
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#659DBD"
+navbar-col: "#25274D"
 navbar-text-col: "#FFFFFF"
-navbar-border-col: "#000000"
-page-col: "#FBEEC1"
+navbar-border-col: "#84CEEB"
+page-col: "#5AB9EA"
 text-col: "#FFFFFF"
 link-col: "#659DBD"
 hover-col: "#DAAD86"
-footer-col: "#8D8741"
+footer-col: "#8860D0"
 footer-text-col: "#FFFFFF"
 footer-link-col: "#659DBD"
 
