--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Tri's Colors
+title: Tri's Blog
 
 # Your name to show in the footer
 author: Tri Nguyen
@@ -24,7 +24,7 @@ round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
 # then specify the following parameter
-#title-img: /path/to/image
+title-img: "/assets/img/logo.jpg"
 
 # --- Footer social media links --- #
 
