--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Tri's Blog
+title: Tri's Blog.
 
 # Your name to show in the footer
 author: Tri Nguyen
@@ -9,9 +9,10 @@ author: Tri Nguyen
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
-  Posts: "feed"
-  Projects: ""
+  Home.: "index:
+  About Me.: "aboutme"
+  Tags.: "tags"
+  Projects.: ""
 
 # --- Logo --- #
 
@@ -72,7 +73,7 @@ page-col: "#FFFFFF"
 text-col: "#000000"
 link-col: "#659DBD"
 hover-col: "#0063A1"
-footer-col: "#EAEAEA"
+footer-col: "#000000"
 footer-text-col: "#FFFFFF"
 footer-link-col: "#A12929"
 
@@ -80,11 +81,11 @@ footer-link-col: "#A12929"
 # instead of colour
 
 # navbar-img: "/assets/img/bgimage.png"
-footer-img: "/assets/img/footer_final.png"
+# footer-img: "/assets/img/footer_final.png"
 page-img: "/assets/img/background-mountain.jpg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
-#mobile-theme-col: "#0085A1"
+mobile-theme-col: "#FFFFFF"
 
 # For any extra customization, you can include additional CSS files in every page on your site. List any custom CSS files here
 #site-css:
